update title and description

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 			sizes="16x16"
 			href="./assets/images/favicon-16x16.png" />
 		<link rel="manifest" href="./site.webmanifest" />
-		<title>Slider</title>
+		<title>HNSlider</title>
 
 		<!-- Open graph -->
 		<!-- og meta -->
 		<meta property="og:type" value="website" />
-		<meta property="og:title" value="Slider" />
-		<meta property="og:description" value="Hnamhocit Slider" />
-		<meta property="og:url" value="https://hnamhocit.github.io/slider" />
+		<meta property="og:title" value="HNSlider" />
+		<meta property="og:description" value="HNSlider" />
+		<meta property="og:url" value="https://hnamhocit.github.io/hnslider" />
 		<meta
 			property="og:image"
-			value="https://hnamhocit.github.io/slider/assets/images/demo.png" />
+			value="https://hnamhocit.github.io/hnslider/assets/images/demo.png" />
 		<meta property="og:image:alt" value="Demo Image" />
 		<meta property="og:image:width" value="400" />
 		<meta property="og:image:height" value="300" />
@@ -38,11 +38,11 @@
 		<meta name="twitter:card" value="summary_large_image" />
 		<meta name="twitter:creator" value="@hnamhocit" />
 		<meta name="twitter:site" value="@hnamhocit" />
-		<meta name="twitter:title" value="Slider" />
+		<meta name="twitter:title" value="HNSlider" />
 		<meta name="twitter:description" value="Hnamhocit Slider" />
 		<meta
 			name="twitter:image"
-			value="https://hnamhocit.github.io/slider/assets/images/demo.png" />
+			value="https://hnamhocit.github.io/hnslider/assets/images/demo.png" />
 		<meta name="twitter:image:alt" value="Demo Image" />
 
 		<!-- Roboto Font -->
